# UltimateAntiCheat

./: .gitignore  API.cpp  API.hpp  AntiCheat.cpp  AntiCheat.hpp  AntiCheatInitFail.hpp  AntiDebugger.cpp  AntiDebugger.hpp  CMakeLists.txt  Detections.cpp  Detections.hpp  Doxyfile  EXTERNAL_MONITORING.md  EvidenceLocker.cpp  EvidenceLocker.hpp  Init.cpp  Init.hpp  Integrity.cpp  Integrity.hpp  Logger.hpp  NetClient.cpp  NetClient.hpp  PEB.hpp  Parser.cpp  Parser.hpp  Preventions.cpp  Preventions.hpp  Process.cpp  Process.hpp  README.md  SHA256.cpp  SHA256.hpp  Services.cpp  Shell.asm  Shellcodes.asm  SplashScreen.cpp  SplashScreen.hpp  SymbolicHash.cpp  SymbolicHash.hpp  UltimateAntiCheat.cpp  (+13 more)
.github/workflows/: windows-test.yml
API/: API.cpp  API.hpp
AntiDebug/: AntiDebugger.cpp  AntiDebugger.hpp  DebuggerDetections.cpp  DebuggerDetections.hpp
AntiTamper/: Integrity.cpp  Integrity.hpp  MapProtectedClass.hpp  NAuthenticode.cpp  NAuthenticode.hpp  Obfuscation.cpp  Obfuscation.hpp  PageGuard.cpp  PageGuard.hpp  SymbolicHash.cpp  remap.cpp  remap.hpp
Common/: AntiCheatInitFail.hpp  DetectionFlags.hpp  DetectionSeverity.hpp  Error.hpp  EvidenceLocker.cpp  EvidenceLocker.hpp  Globals.cpp  Globals.hpp  Logger.cpp  Logger.hpp  MD5.cpp  MD5.hpp  SHA256.cpp  SHA256.hpp  Settings.hpp  Utility.cpp  Utility.hpp  json.hpp
Core/: API.cpp  API.hpp  AntiCheat.cpp  AntiCheat.hpp  AntiCheatInitFail.hpp  AntiCheatLib.cpp  AntiCheatLib.hpp  Detections.cpp  Detections.hpp  Preventions.cpp  Preventions.hpp
Environment/: Services.cpp  Services.hpp
GameEvents/: EventLogger.cpp  EventLogger.hpp  EventReporter.cpp  EventReporter.hpp
Integrity/: Integrity.cpp  Integrity.hpp  NAuthenticode.cpp  NAuthenticode.hpp  remap.cpp
LibTest/: UACLibTest.cpp  UACLibTest.vcxproj  UACLibTest.vcxproj.filters
Libs/: brotlicommon.lib  brotlidec.lib  libcurl-d.lib  libcurl.lib  zlib.lib  zlibd.lib
MiscFiles/: BlacklistedBytePatternList.txt  BlacklistedDriverList.txt
Network/: HttpClient.cpp  HttpClient.hpp  NetClient.cpp  NetClient.hpp  zconf.h
Network/Packets/: PacketReader.hpp  PacketWriter.hpp  Packets.cpp  Packets.hpp
Network/curl/: curl.h  header.h  multi.h  options.h
Obscure/: ASMStubs.asm  Obfuscation.cpp  Obfuscation.hpp  SymbolicHash.hpp  VirtualMachine.hpp  VirtualMachineException.hpp  XorStr.hpp  ntldr.hpp
Process/: Exports.cpp  Exports.hpp  Handles.cpp  Handles.hpp  PEB.cpp  PEB.hpp  Process.cpp  Process.hpp  Thread.cpp  Thread.hpp
Process/Memory/: ntdll.h  remap.cpp  remap.hpp
Server/: Detections.cs  HexText.cs  Logger.cs  Program.cs  README.md  Server.cs  UACServer.csproj  Utilities.cs
Server/Network/: AntiCheatClient.cs  Factory.cs  Handlers.cs  Opcodes.cs  PacketException.cs  PacketReader.cs  PacketWriter.cs  Server.cs
Server/Properties/: AssemblyInfo.cs
documentation/: wipDoc.md
formal-model/: integrity-model-check.als  model-one.als  model-three.als  model-two.als
